--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="textsContainer">chat</div>
         <div class="textTypingContainer">
-            <div class="emoji"><img src="emoji.png" id="emoji" alt="emojis"></div>
+            <div class="emoji"><img src="download.png" id="emoji" alt="emojis"></div>
             <textarea type="text" class="textTypingArea" placeholder="type your message here."></textarea>
             <div class="paperAirplane"><img src="paperAirplane.jpg" id="paperAirplane" alt=""></div>
         </div>
