--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <div class="searchContainer"><input type="text" placeholder="Search"></div>
         <div class="listContainer">list</div>
         <div class="userIconUsernameContainer">
-            <div><img src="default.png" alt="default"><input type="text" placeholder="Username"></div>
+            <div><img src="default.png" alt="default"><input type="text" placeholder="Username"><img src="edit.png"
+                    alt=""></div>
         </div>
         <div class="textsContainer">chat</div>
         <div class="textTypingContainer">
