--- a/index.html
+++ b/index.html
@@ -14,14 +14,25 @@
         <div class="searchContainer"><input type="text" placeholder="Search"></div>
         <div class="listContainer">list</div>
         <div class="userIconUsernameContainer">
-            <div><img src="default.png" alt="default"><input type="text" placeholder="Username"><img src="edit.png"
-                    alt=""></div>
+            <div>
+                <img class="userProfilePicture" src="default.png" alt="default">
+                <input type="text" placeholder="Username">
+                <div>
+                    <img class="saveNameButton" src="save.png" alt="">
+                    <img class="editNameButton" src="edit.png" alt="">
+                </div>
+
+            </div>
         </div>
         <div class="textsContainer">chat</div>
         <div class="textTypingContainer">
-            <div class="emoji"><img src="download.png" id="emoji" alt="emojis"></div>
+            <div class="emoji">
+                <img src="smiley.png" id="emoji" alt="emojis">
+            </div>
             <textarea type="text" class="textTypingArea" placeholder="type your message here."></textarea>
-            <div class="paperAirplane"><img src="paperAirplane.jpg" id="paperAirplane" alt=""></div>
+            <div class="paperAirplane">
+                <img src="paperAirplane.jpg" id="paperAirplane" alt="">
+            </div>
         </div>
     </div>
 </body>
