--- a/index.html
+++ b/index.html
@@ -6,32 +6,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="module" src="index.js"></script>
     <title>Document</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="searchContainer"><input type="text" placeholder="Search"></div>
-        <div class="listContainer">list</div>
+        <div class="searchContainer">
+            <div><img src="images/searchicon.png" alt=""><input type="text" id="searchBar" placeholder="Search"></div>
+        </div>
+        <div class="listContainer">
+            <div class="refreshIconContainer"><img src="images/refreshicon.png" id="refreshIcon" alt=""></div>
+
+            <ul>
+                <li class="listItemsContainer">
+                    <div id="imgContainerList"><img src="images/dude.jpg" id="listUserIcon" alt="">
+                        <div id="onlinestatus"></div>
+                    </div>
+                    <div>
+                        <div id="userListName">Kostas</div>
+                        <div id="userLastMessage">kapapapapap</div>
+                    </div>
+                    <div id="lastOnline">48h</div>
+                </li>
+            </ul>
+
+        </div>
         <div class="userIconUsernameContainer">
             <div>
-                <img class="userProfilePicture" src="default.png" alt="default">
-                <input type="text" placeholder="Username">
+                <img class="userProfilePicture" id="uploadButton" src="images/default.png" alt="default">
+                <input type="text" id="username" placeholder="Username">
                 <div>
-                    <img class="saveNameButton" src="save.png" alt="">
-                    <img class="editNameButton" src="edit.png" alt="">
+                    <img class="saveNameButton" id="saveButton" src="images/save.png" alt="">
+                    <img class="editNameButton" id="editButton" src="images/edit.png" alt="">
                 </div>
 
             </div>
         </div>
-        <div class="textsContainer">chat</div>
+        <div class="textsContainer" id="chat">chat</div>
         <div class="textTypingContainer">
             <div class="emoji">
-                <img src="smiley.png" id="emoji" alt="emojis">
+                <img src="images/smiley.png" id="emoji" alt="emojis">
             </div>
-            <textarea type="text" class="textTypingArea" placeholder="type your message here."></textarea>
+            <textarea type="text" class="textTypingArea" id="typingArea"
+                placeholder="type your message here."></textarea>
             <div class="paperAirplane">
-                <img src="paperAirplane.jpg" id="paperAirplane" alt="">
+                <img src="images/paperAirplane.jpg" id="paperAirplane" alt="">
             </div>
         </div>
     </div>
