--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                         <div id="userListName">Kostas</div>
                         <div id="userLastMessage">kapapapapap</div>
                     </div>
-                    <div id="lastOnline">48h</div>
+                    <div id="dateContainer">
+                        <div id="lastOnline">48h</div>
+                    </div>
                 </li>
             </ul>
 
@@ -40,7 +42,6 @@
                     <img class="saveNameButton" id="saveButton" src="images/save.png" alt="">
                     <img class="editNameButton" id="editButton" src="images/edit.png" alt="">
                 </div>
-
             </div>
         </div>
         <div class="textsContainer" id="chat">chat</div>
