--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                         <div id="onlinestatus"></div>
                     </div>
                     <div>
-
+                        <div id="userListName">Kostas</div>
+                        <div id="userLastMessage">kapapapapap</div>
                     </div>
                     <div id="dateContainer">
                         <div id="lastOnline">48h</div>
@@ -51,8 +52,8 @@
 
         <!-- CHAT - MESSAGE DISPLAY -->
         <div class="textsContainer" id="chat">
-            <div id="otherUser"></div>
-            <div id="mainUser"></div>
+            <div id="otherUser">kekek</div>
+            <div id="mainUser">elele</div>
         </div>
 
         <!-- USER TYPING AREA -->
