--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <!-- LIST  -->
         <div class="listContainer">
-            <div class="refreshIconContainer"><img src="images/refreshicon.png" id="refreshIcon" alt=""></div>
+            <div class="refreshIconContainer"><img src="images/refresh.png" id="refreshIcon" alt=""></div>
 
             <ul>
                 <li class="listItemsContainer">
