--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
         <!-- LIST  -->
         <div class="listContainer">
-            <div class="refreshIconContainer"><img src="images/refresh.png" id="refreshIcon" alt=""></div>
+            <div class="refreshIconContainer"><img src="images/refresh.png" id="refreshList" alt=""></div>
 
-            <ul>
+            <ul id="list">
                 <li class="listItemsContainer">
                     <div id="imgContainerList"><img src="images/dude.jpg" id="listUserIcon" alt="">
                         <div id="onlinestatus"></div>
@@ -45,7 +45,7 @@
                 <input type="text" id="username" placeholder="Username">
                 <div>
                     <img class="saveNameButton" id="saveButton" src="images/save.png" alt="">
-                    <img class="editNameButton" id="editButton" src="images/edit.png" alt="">
+                    <img class="editNameButton" id="editName" src="images/edit.png" alt="">
                 </div>
             </div>
         </div>
